--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "conventionalCommits.scopes": ["dependências", "Desenvolvimento"]
+  "conventionalCommits.scopes": ["dependências", "Desenvolvimento", "Config"]
 }
