--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
     "@prisma/client": "^4.10.1",
     "dayjs": "^1.11.7",
     "fastify": "^4.12.0",
+    "install": "^0.13.0",
+    "start": "^5.1.0",
     "zod": "^3.20.2"
   },
   "devDependencies": {
